<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove Picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        android:backgroundTint="@color/primary_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.209" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="354dp"
        android:layout_height="485dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/geo"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="348dp"
                android:text="GeoLocation:"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/notif"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="404dp"
                android:text="Notifications:"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="237dp"
                android:layout_height="43dp"
                android:layout_marginTop="288dp"
                android:text="Preferences"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="180dp"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="124dp"
                android:text="Name:"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="180dp"
                android:text="Email:"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="174dp"
                android:layout_height="68dp"
                android:layout_marginTop="24dp"
                android:text="Profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="124dp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/geotext"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="348dp"
                app:layout_constraintStart_toEndOf="@+id/geo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/notiftext"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="404dp"
                app:layout_constraintStart_toEndOf="@+id/notif"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/pfp"
                android:layout_width="94dp"
                android:layout_height="92dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="36dp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat='@drawable/baseline_person_24'
                tools:ignore="SpeakableTextPresentCheck"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/primary_button"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.209" />

</androidx.constraintlayout.widget.ConstraintLayout>
