...
                android:id="@+id/homeButton"
                android:layout_width="190dp"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:background="#00000000"
                app:srcCompat="@drawable/home" />
            <ImageButton
                android:id="@+id/scannerButton"
                android:layout_width="190dp"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
...
                android:id="@+id/profileButton"
                android:layout_width="190dp"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:background="#00000000"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/profile" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
